--- a/print.html
+++ b/print.html
@@ -71,29 +71,41 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         fullText += strings.join('\n') + '\n';
     }
 
-    // Split lines and trim
-    const lines = fullText.split(/\r?\n/).map(l=>l.trim()).filter(l=>l);
+    const lines = fullText.split(/\r?\n/).map(l => l.trim()).filter(l => l);
 
-    // Extract only required fields
-    extracted = {}; // reset
-    lines.forEach(line=>{
-        if(line.includes('Name:') || line.includes('नाव:')){
-            extracted.firstName = line.split(':')[1].trim();
+    // Reset extracted object
+    extracted = {};
+
+    lines.forEach(line => {
+        if(line.match(/Name:/) && !line.match(/Husband/)){
+            let fullName = line.split(':')[1].trim(); // "Nilofar Mohammed Islam Khan"
+            let nameParts = fullName.split(' ');
+            extracted.firstName = nameParts[0]; // Nilofar
+            extracted.lastName = nameParts.slice(1).join(' '); // Mohammed Islam Khan
         }
-        else if(line.includes('Epic no.') || line.includes('EPIC No') || line.includes('मतदार ओळखपतर् कर्')){
+        else if(line.match(/Husband's Name:/)){
+            extracted.husbandName = line.split(':')[1].trim();
+        }
+        else if(line.match(/Epic no\.|EPIC No/)){
             extracted.epic = line.split(':')[1].trim();
         }
-        else if(line.includes('Serial No.') || line.includes('अनुक्रमांक')){
+        else if(line.match(/Serial No\.|अनुक्रमांक/)){
             extracted.serial = line.split(':')[1].trim();
         }
-        else if(line.includes('Part No.') || line.includes('भाग क्रमांक') ){
+        else if(line.match(/Part No\.|भाग क्रमांक/)){
             extracted.partNo = line.split(':')[1].trim();
         }
-        else if(line.includes('Assembly Constituency') || line.includes('विधानसभा मतदारसंघ क्रमांक')){
+        else if(line.match(/Assembly Constituency|विधानसभा मतदारसंघ/)){
             extracted.constituency = line.split(':')[1].trim();
         }
-        else if(line.includes('Polling Station') || line.includes('मतदान केंद्राचा पत्ता')){
+        else if(line.match(/Polling Station|मतदान केंद्र/)){
             extracted.polling = line.split(':')[1].trim();
+        }
+        else if(line.match(/Date of Birth|जन्मतारीख/)){
+            extracted.dob = line.split(':')[1]?.trim() || '';
+        }
+        else if(line.match(/Gender|स्तर्ी/)){
+            extracted.gender = line.split(':')[1]?.trim() || '';
         }
     });
 
@@ -130,7 +142,7 @@ async function downloadPDF(){
     for(const key in extracted){
         if(extracted[key]){
             doc.text(`${key.replace(/([A-Z])/g,' $1').trim()}: ${extracted[key]}`, 10, y);
-            y += 10;
+            y += 8;
         }
     }
     const savedImg = localStorage.getItem('voterImage');
